# irys-stateful-swarms

./: .env.phase0  .env.phase0_lean  .env.phase0_recovery  .gitignore  .mcp.json  FAILURE_ANALYSIS.md  LICENSE  README.md  mcp_redesign.md  mcp_review.md  phase0_manifest.json  pyproject.toml  whitepaper.md  whitepaper.tex
benchmarks/manifests/: full_benchmark.json  loop_compare_5.json  phase0_smoke_48.json
docs/: LOOP_ARCHITECTURE.md  SWARM_INTELLIGENCE.md
experiments/: EXPERIMENTS.md  ledger.jsonl
scripts/: compare_domain_lens.py  compare_scores.py  run_phase0_smoke.ps1  run_phase0_smoke.sh  setup_adhoc_smoke.py
src/: bench.py  cli.py  constants.py  mcp_server.py  runner.py  scoring.py
tests/: test_artifact_commitments.py  test_artifact_contracts.py  test_bench.py  test_blackboard_maintenance.py  test_calculation_verification.py  test_cli_ask.py  test_curation.py  test_debt_sensors.py  test_derived_work.py  test_gemini_timeout.py  test_ingestion_docx.py  test_ingestion_eml.py  test_ingestion_pdf.py  test_ingestion_pptx.py  test_ingestion_text.py  test_ingestion_xlsx.py  test_lifecycle_summary.py  test_loop_provenance.py  test_mcp_server.py  test_obligations.py  test_placement_verifier.py  test_prompt_audit.py  test_rotating_provider.py  test_scoring.py  test_sectioned_synthesis.py  test_seed_context_enrichment.py  test_signal_closure.py  test_signal_closure_gate.py  test_source_claims.py  test_source_custody.py  test_state_conversion.py  test_survival_trace.py  test_synthesis.py  test_synthesis_packet.py  test_verifier_fixtures.py  test_web_search.py
(+270 files in other folders)
